# umoria

./: .gitignore  CHANGES.orig  CHANGES.~1~  CMakeLists.txt  INSTALL  Int16bit.patch  M.doc  MANIFEST  Moria.1  Moria.2  Moria.doc.1  Moria.doc.2  PROBLEMS  PRONOUNCE  README.md  config.h  constants.h  create.c  desc.c  files.c  help  io.c  magic.c  monsters.c  save.c  shar.script  spells.c
atari_st/: moria.prj
cygwin/: Makefile  README  moria.bat  readme.txt  unix.c
files/: news  version.hlp
source/: config.h  constant.h  death.c  dungeon.c  externs.h  files.c  generate.c.orig  io.c  main.c  misc1.c  moria2.c  save.c  signals.c  types.h
windows/: CMakeLists.txt  MORIA.CNF  README  cp437utf.c  cp437utf.h  makedist.bat  ms_misc.c  readme.txt
windows/mingw/: build.sh  clean.sh  makedist.sh  readme.txt
windows/vs2013/: packages.config  umoria.sln  umoria.vcxproj  umoria.vcxproj.filters
